Signed-off-by: xuxu713 <190159372@qq.com>

--- a/css/index.css
+++ b/css/index.css
@@ -285,6 +285,7 @@ a {
   color: #666666;
   z-index: 95;
   font-size: 12px;
+  display: none;
 }
 #header .wrap .search .text-ul li {
   padding: 6px;
