--- a/style/index.scss
+++ b/style/index.scss
@@ -279,7 +279,7 @@ a {
                 color: #666666;
                 z-index: 95;
                 font-size: 12px;
-                //              display: none;
+                display: none;
                 li {
                     padding: 6px;
                     cursor: pointer;
