--- a/style/register.css
+++ b/style/register.css
@@ -78,6 +78,7 @@ input::-webkit-input-placeholder {
     background: #eee; }
   .section .main .i-status {
     position: absolute;
+    display: none;
     width: 16px;
     height: 16px;
     top: 20px;
@@ -94,6 +95,8 @@ input::-webkit-input-placeholder {
       height: 16px;
       background: url("//misc.360buyimg.com/user/reg/1.0.0/css/i/icon.png") no-repeat;
       background-position: 0 -100px; }
+    .section .main .input-tip span {
+      font-size: 12px; }
   .section .main .btn-register {
     width: 100%;
     height: 54px;
