--- a/style/register.css
+++ b/style/register.css
@@ -1,3 +1,22 @@
+body,
+html,
+.largest {
+  width: 100%;
+  height: 100%; }
+
+.largest {
+  position: relative; }
+
+.zhezhao {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  opacity: 0.15;
+  z-index: 9998;
+  background-color: black;
+  width: 100%;
+  height: 1002px; }
+
 .wrap {
   margin: 0 auto;
   width: 1210px; }
@@ -7,7 +26,7 @@ input {
   outline: 0; }
 
 input::-webkit-input-placeholder {
-  color: #cccccc !important; }
+  color: #ccc !important; }
 
 .header {
   height: 110px;
@@ -167,5 +186,89 @@ input::-webkit-input-placeholder {
       margin: 0 10px;
       font-size: 12px;
       text-align: center; }
+
+.ui-dialog {
+  width: 947px;
+  position: fixed;
+  z-index: 10000;
+  display: block;
+  overflow: hidden;
+  top: 0px;
+  left: 234px;
+  border: 4px solid rgba(0, 0, 0, 0.1);
+  box-shadow: 0 3px 10px #ccc;
+  font-size: 14px;
+  font-family: "Microsoft YaHei", "Hiragino Sans GB"; }
+
+.ui-dialog-title {
+  width: 927px;
+  color: #000;
+  font-weight: 700;
+  position: relative;
+  padding: 0 10px;
+  height: 31px;
+  line-height: 31px;
+  background: #f3f3f3;
+  font-size: 14px;
+  color: #666;
+  font-family: "Microsoft YaHei"; }
+  .ui-dialog-title span {
+    color: #000; }
+
+.ui-dialog-content {
+  height: 545px;
+  width: 927px;
+  overflow: hidden;
+  padding: 10px;
+  background: #fff;
+  user-select: none; }
+
+.protocol-con {
+  height: 426px;
+  padding: 10px;
+  line-height: 20px;
+  overflow-x: hidden;
+  overflow-y: auto;
+  margin-bottom: 25px; }
+
+.protocol-button {
+  text-align: center; }
+  .protocol-button a {
+    display: inline-block;
+    width: 200px;
+    height: 54px;
+    line-height: 54px;
+    color: #999;
+    vertical-align: middle;
+    margin-right: 30px;
+    background: #e3e4e5;
+    font-size: 16px; }
+  .protocol-button button {
+    display: inline-block;
+    width: 200px;
+    vertical-align: middle;
+    margin: 0 auto;
+    height: 54px;
+    color: #fff;
+    background: #e22;
+    border: 0;
+    font-size: 16px;
+    font-family: "Microsoft YaHei", "Hiragino Sans GB";
+    outline: 0;
+    cursor: pointer; }
+
+.ui-dialog-close {
+  background: url("//misc.360buyimg.com/user/reg/1.0.0/widget/personal-reg-1130/i/x.png") no-repeat;
+  background-size: 13px 13px;
+  cursor: pointer;
+  display: block;
+  position: absolute;
+  z-index: 100000;
+  top: 10px;
+  right: 10px;
+  overflow: hidden;
+  width: 13px;
+  height: 13px;
+  font-size: 0; }
 
 /*# sourceMappingURL=register.css.map */
