--- a/style/register.scss
+++ b/style/register.scss
@@ -1,4 +1,26 @@
 $bgurl:url('//misc.360buyimg.com/user/reg/1.0.0/css/i/icon.png') no-repeat;
+body,
+html,
+.largest {
+    width: 100%;
+    height: 100%;
+}
+
+.largest {
+    position: relative;
+}
+
+.zhezhao {
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    opacity: 0.15;
+    z-index: 9998;
+    background-color: rgb(0, 0, 0);
+    width: 100%;
+    height: 1002px;
+}
+
 .wrap {
     margin: 0 auto;
     width: 1210px;
@@ -10,7 +32,7 @@ input {
 }
 
 input::-webkit-input-placeholder {
-    color: rgb(204, 204, 204) !important
+    color: #ccc !important
 }
 
 .header {
@@ -116,7 +138,7 @@ input::-webkit-input-placeholder {
                 background: $bgurl;
                 background-position: 0 -100px;
             }
-            span{
+            span {
                 font-size: 12px;
             }
         }
@@ -203,4 +225,97 @@ input::-webkit-input-placeholder {
             text-align: center;
         }
     }
+}
+
+.ui-dialog {
+    width: 947px;
+    position: fixed;
+    z-index: 10000;
+    display: block;
+    overflow: hidden;
+    top: 0px;
+    left: 234px;
+    border: 4px solid rgba(0, 0, 0, .1);
+    box-shadow: 0 3px 10px #ccc;
+    font-size: 14px;
+    font-family: "Microsoft YaHei", "Hiragino Sans GB";
+}
+
+.ui-dialog-title {
+    width: 927px;
+    color: #000;
+    font-weight: 700;
+    position: relative;
+    padding: 0 10px;
+    height: 31px;
+    line-height: 31px;
+    background: #f3f3f3;
+    font-size: 14px;
+    color: #666;
+    font-family: "Microsoft YaHei";
+    span {
+        color: #000;
+    }
+}
+
+.ui-dialog-content {
+    height: 545px;
+    width: 927px;
+    overflow: hidden;
+    padding: 10px;
+    background: #fff;
+    user-select: none;
+}
+
+.protocol-con {
+    height: 426px;
+    padding: 10px;
+    line-height: 20px;
+    overflow-x: hidden;
+    overflow-y: auto;
+    margin-bottom: 25px;
+}
+
+.protocol-button {
+    text-align: center;
+    a {
+        display: inline-block;
+        width: 200px;
+        height: 54px;
+        line-height: 54px;
+        color: #999;
+        vertical-align: middle;
+        margin-right: 30px;
+        background: #e3e4e5;
+        font-size: 16px;
+    }
+    button {
+        display: inline-block;
+        width: 200px;
+        vertical-align: middle;
+        margin: 0 auto;
+        height: 54px;
+        color: #fff;
+        background: #e22;
+        border: 0;
+        font-size: 16px;
+        font-family: "Microsoft YaHei", "Hiragino Sans GB";
+        outline: 0;
+        cursor: pointer;
+    }
+}
+
+.ui-dialog-close {
+    background: url('//misc.360buyimg.com/user/reg/1.0.0/widget/personal-reg-1130/i/x.png') no-repeat;
+    background-size: 13px 13px;
+    cursor: pointer;
+    display: block;
+    position: absolute;
+    z-index: 100000;
+    top: 10px;
+    right: 10px;
+    overflow: hidden;
+    width: 13px;
+    height: 13px;
+    font-size: 0;
 }
