--- a/style/login.scss
+++ b/style/login.scss
@@ -149,6 +149,30 @@ li {
         margin: 30px auto;
         position: relative;
         display: none;
+        .msg-error {
+           visibility: hidden;
+            position: relative;
+            top: -10px;
+            background: #ffebeb;
+            color: #e4393c;
+            border: 1px solid #faccc6;
+            //          padding: 3px 10px 3px 40px;
+            line-height: 20px;
+            height: 20px!important;
+            margin: 5px 0;
+            font-size: 12px;
+            b {
+                position: absolute;
+                top: 50%;
+                left: 10px;
+                display: block;
+                margin-top: -8px;
+                width: 16px;
+                height: 16px;
+                overflow: hidden;
+                background: url(//misc.360buyimg.com/user/passport/1.0.0/widget/login-form-2016-1124/i/pwd-icons-new.png) -104px -49px no-repeat;
+            }
+        }
         .item {
             position: relative;
             margin-bottom: 20px;
@@ -220,13 +244,15 @@ li {
             }
             .btn-img {
                 border: 1px solid #e85356;
-                display: block;
+                //              display: block;
                 width: 302px;
                 background: #e4393c;
-                height: 31px;
-                line-height: 31px;
+                //              height: 31px;
+                height: 100%;
+                text-align: center;
                 color: #fff;
                 font-size: 20px;
+                padding:3px;
             }
         }
     }
